--- a/infra/pubspec.yaml
+++ b/infra/pubspec.yaml
@@ -2,7 +2,7 @@ name: infra
 publish_to: none
 
 environment:
-  sdk: ">=2.18.0 <4.0.0"
+  sdk: ">=3.0.0-0 <4.0.0"
 
 dependencies:
   amplify_core: ">=1.0.0-next.8+1 <1.0.0-next.9"
