--- a/packages/amplify/amplify_flutter_ios/example/pubspec.yaml
+++ b/packages/amplify/amplify_flutter_ios/example/pubspec.yaml
@@ -4,8 +4,8 @@ description: Test bed for amplify_flutter_ios
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.18.0 <4.0.0"
-  flutter: ">=3.3.0"
+  sdk: ">=3.0.0-0 <4.0.0"
+  flutter: ">=3.10.0-0"
 
 dependencies:
   amplify_flutter_ios: ">=1.0.0-next.8 <1.0.0-next.9"
