--- a/packages/amplify_lints/pubspec.yaml
+++ b/packages/amplify_lints/pubspec.yaml
@@ -6,7 +6,7 @@ repository: https://github.com/aws-amplify/amplify-flutter/tree/main/packages/am
 issue_tracker: https://github.com/aws-amplify/amplify-flutter/issues
 
 environment:
-  sdk: ">=2.18.0 <4.0.0"
+  sdk: ">=3.0.0-0 <4.0.0"
 
 dependencies:
   flutter_lints: ^2.0.0
