--- a/packages/auth/amplify_auth_cognito/example/pubspec.yaml
+++ b/packages/auth/amplify_auth_cognito/example/pubspec.yaml
@@ -4,8 +4,8 @@ version: 0.1.0
 publish_to: none
 
 environment:
-  sdk: ">=2.18.0 <4.0.0"
-  flutter: ">=3.3.0"
+  sdk: ">=3.0.0-0 <4.0.0"
+  flutter: ">=3.10.0-0"
 
 dependencies:
   amplify_api: ">=1.0.0-next.8 <1.0.0-next.9"
@@ -18,12 +18,9 @@ dependencies:
     sdk: flutter
   go_router: ^3.0.0
 
-# Needed to support both Flutter 3.3 + 3.7 in CI.
-# TODO(dnys1): Remove when Flutter 3.3 is no longer supported
 dependency_overrides:
-  async: ^2.10.0
-  meta: ^1.9.0
-  test_api: ^0.4.0
+  # Remove when `checks` is upgraded
+  test_api: ^0.5.0
 
 dev_dependencies:
   amplify_auth_cognito_dart: ">=0.9.0 <0.10.0"
@@ -44,7 +41,7 @@ dev_dependencies:
     sdk: flutter
   io: ^1.0.0
   stack_trace: ^1.10.0
-  test: ^1.22.0
+  test: ^1.22.1
   webdriver: ^3.0.0
   webview_flutter: ^4.0.0
   webview_flutter_wkwebview: ^3.1.0
