--- a/packages/authenticator/amplify_authenticator/pubspec.yaml
+++ b/packages/authenticator/amplify_authenticator/pubspec.yaml
@@ -6,8 +6,8 @@ repository: https://github.com/aws-amplify/amplify-flutter/tree/main/packages/au
 issue_tracker: https://github.com/aws-amplify/amplify-flutter/issues
 
 environment:
-  sdk: ">=2.18.0 <4.0.0"
-  flutter: ">=3.3.0"
+  sdk: ">=3.0.0-0 <4.0.0"
+  flutter: ">=3.10.0-0"
 
 dependencies:
   amplify_auth_cognito: ">=1.0.0 <1.1.0"
@@ -31,7 +31,7 @@ dev_dependencies:
   amplify_integration_test:
     path: ../../test/amplify_integration_test
   amplify_lints: ">=2.0.3 <2.1.0"
-  build_runner: ^2.3.3
+  build_runner: ^2.4.0
   build_version: ^2.1.1
   flutter_test:
     sdk: flutter
