--- a/packages/common/amplify_db_common/example/pubspec.yaml
+++ b/packages/common/amplify_db_common/example/pubspec.yaml
@@ -3,8 +3,8 @@ description: Demonstrates how to use the amplify_db_common plugin.
 publish_to: "none"
 
 environment:
-  flutter: ">=3.3.0"
-  sdk: ">=2.18.0 <4.0.0"
+  flutter: ">=3.10.0-0"
+  sdk: ">=3.0.0-0 <4.0.0"
 
 dependencies:
   amplify_db_common: ">=0.1.2+5 <0.2.0"
@@ -20,7 +20,7 @@ dependency_overrides:
 dev_dependencies:
   amplify_lints: ^2.0.0
   drift_dev: ^2.2.0+1
-  build_runner: ^2.2.1
+  build_runner: ^2.4.0
   flutter_test:
     sdk: flutter
   integration_test:
