--- a/packages/example_common/pubspec.yaml
+++ b/packages/example_common/pubspec.yaml
@@ -4,11 +4,11 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk: ">=2.18.0 <4.0.0"
+  sdk: ">=3.0.0-0 <4.0.0"
 
 dependencies:
   meta: ^1.7.0
 
 dev_dependencies:
   amplify_lints: ">=2.0.2 <2.1.0"
-  test: ^1.16.0
+  test: ^1.22.1
