--- a/packages/secure_storage/amplify_secure_storage_test/pubspec.yaml
+++ b/packages/secure_storage/amplify_secure_storage_test/pubspec.yaml
@@ -4,10 +4,10 @@ version: 0.1.0
 publish_to: none
 
 environment:
-  sdk: ">=2.18.0 <4.0.0"
+  sdk: ">=3.0.0-0 <4.0.0"
 
 dependencies:
-  test: ^1.16.0
+  test: ^1.22.1
   amplify_secure_storage_dart: ">=0.3.0 <0.4.0"
 
 dependency_overrides:
@@ -19,6 +19,6 @@ dependency_overrides:
 dev_dependencies:
   amplify_lints:
     path: ../../amplify_lints
-  build_runner: ^2.0.0
+  build_runner: ^2.4.0
   build_test: ^2.0.0
-  build_web_compilers: ^3.2.3
+  build_web_compilers: ^4.0.0
