--- a/packages/smithy/goldens/lib2/restXml/pubspec.yaml
+++ b/packages/smithy/goldens/lib2/restXml/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: none
 
 
 environment:
-  sdk: ">=2.18.0 <4.0.0"
+  sdk: ">=3.0.0-0 <4.0.0"
 
 dependencies:
   smithy:
@@ -41,9 +41,9 @@ dependency_overrides:
 dev_dependencies:
   smithy_test:
     path: ../../../smithy_test
-  build_runner: ^2.0.0
-  build_web_compilers: ^3.2.0
+  build_runner: ^2.4.0
+  build_web_compilers: ^4.0.0
   build_test: ^2.1.5
   built_value_generator: 8.4.4
   lints: ^2.0.0
-  test: ^1.16.0
+  test: ^1.22.1
