--- a/packages/smithy/goldens/pubspec.yaml
+++ b/packages/smithy/goldens/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk: ">=2.18.0 <4.0.0"
+  sdk: ">=3.0.0-0 <4.0.0"
 
 dependencies:
   aws_common: ">=0.4.0 <0.5.0"
@@ -31,4 +31,4 @@ dev_dependencies:
   pubspec_parse: ^1.2.0
   smithy_codegen:
     path: ../smithy_codegen
-  test: ^1.16.0
+  test: ^1.22.1
