--- a/packages/worker_bee/e2e/pubspec.yaml
+++ b/packages/worker_bee/e2e/pubspec.yaml
@@ -3,7 +3,7 @@ description: E2E tests for the worker_bee package.
 publish_to: none
 
 environment:
-  sdk: '>=2.18.0 <4.0.0'
+  sdk: ">=3.0.0-0 <4.0.0"
 
 dependencies: 
   aws_common: ">=0.4.0 <0.5.0"
@@ -11,7 +11,7 @@ dependencies:
   built_value: ">=8.4.0 <8.5.0"
   fixnum: ^1.0.0
   meta: ^1.7.0
-  test: ^1.19.0
+  test: ^1.22.1
   worker_bee: ">=0.1.3+2 <0.2.0"
 
 dependency_overrides:
@@ -23,9 +23,9 @@ dependency_overrides:
 dev_dependencies:
   amplify_lints:
     path: ../../amplify_lints
-  build_runner: ^2.0.0
+  build_runner: ^2.4.0
   build_verify: ^3.0.0
-  build_web_compilers: ^3.2.3
+  build_web_compilers: ^4.0.0
   built_value_generator: 8.4.4
   worker_bee_builder:
     path: ../worker_bee_builder
