--- a/templates/flutter-package/hooks/pubspec.yaml
+++ b/templates/flutter-package/hooks/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_package_hooks
 publish_to: none
 
 environment:
-  sdk: ">=2.18.0 <4.0.0"
+  sdk: ">=3.0.0-0 <4.0.0"
 
 dependencies:
   mason: ">=0.1.0-dev.40 <0.1.0"
