--- a/packages/secure_storage/amplify_secure_storage_dart/pubspec.yaml
+++ b/packages/secure_storage/amplify_secure_storage_dart/pubspec.yaml
@@ -40,7 +40,7 @@ dev_dependencies:
   build_runner: ^2.4.0
   build_web_compilers: ^4.0.0
   built_value_generator: 8.4.4
-  ffigen: ^6.0.0
+  ffigen: ^8.0.0-0
   test: ^1.22.1
   worker_bee_builder: ">=0.1.4+5 <0.2.0"
 
