--- a/.github/workflows/aft.yaml
+++ b/.github/workflows/aft.yaml
@@ -6,10 +6,10 @@ on:
       - stable
       - next
     paths:
-      - 'packages/aft/**/*.dart'
+      - "packages/aft/**/*.dart"
   pull_request:
     paths:
-      - 'packages/aft/**/*.dart'
+      - "packages/aft/**/*.dart"
   schedule:
     - cron: "0 0 * * 0" # Every Sunday at 00:00
 defaults:
@@ -36,7 +36,7 @@ jobs:
       - name: Setup Dart
         uses: dart-lang/setup-dart@196f54580e9eee2797c57e85e289339f85e6779d # main
         with:
-          sdk: stable
+          sdk: beta
 
       - name: Get Packages
         working-directory: packages/aft
